# MySSH

./: .gitignore  CMakeLists.txt  README.md
keys/: server_cert.pem  server_key.pem
src/client/: main.cpp
src/common/: crypto.cpp  crypto.h  protocol.h  utils.cpp  utils.h
src/server/: main.cpp
